--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
-ul{background-colour: red}
-p{background-colour: blue}
+ul{background-color: red}
+p{background-color: blue}
 body{background: green}
 h1{text-align: center; font-size: 75px; font-family: times-new-roman;colour: black;}
 img{border-radius:50%;width:300px;height:300px;}
