--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-ul{background-color: red}
+li{background-color: red}
 p{background-color: blue}
 body{background: green}
 h1{text-align: center; font-size: 75px; font-family: times-new-roman;colour: black;}
