--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
-li{background-color: red}
-p{background-color: blue}
-body{background: green}
-h1{text-align: center; font-size: 75px; font-family: times-new-roman;colour: black;}
+body{margin: 0;padding: 0;background-color: #3cf899;}
+h1{text-align: center;font-size: 75px;font-family: sans-serif;color: #00fff5;}
+p{font-size: 20px;margin: 50px;color: #00fff5;font-family: Arial, Helevetica, sans-serif;}
 img{border-radius:50%;width:300px;height:300px;}
+li{background-color: #ff2e69}
+p1{font-size: 20px;margin: 50px;color: yellow;font-family: Arial, Helvetica, sans-serif;}
