--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-body{margin: 0;padding: 0;background-color: #3cf899;}
+body{margin: 0;padding: 0;background-color: black;}
 h1{text-align: center;font-size: 75px;font-family: sans-serif;color: #00fff5;}
 p{font-size: 20px;margin: 50px;color: #00fff5;font-family: Arial, Helevetica, sans-serif;}
 img{border-radius:50%;width:300px;height:300px;}
